--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding/pdsql.py=utf-8
 encoding/readcsv.py=utf-8
+encoding/stockRealtimeMonitor.py=utf-8
 encoding/tradeStrategy.py=utf-8
